# ResearchAgent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py
reports/: 20260609_1526_Agent_Memory.md
research_agent/: __init__.py  agents.py  api.py  knowledge.py  llm.py  main.py  memory.py  orchestrator.py  report.py  tools.py
research_agent/rag/: __init__.py  config.toml  knowledge.py
research_agent/rag/repo/: 《毛泽东传》（罗斯.特里尔版）.txt
