[project]
name = "research-agent"
version = "1.0.0"
description = "多Agent研究助理系统 - Multi-Agent Research Assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "openai>=1.90.0",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.49.0",
]

[project.scripts]
research-agent = "research_agent.main:cli"
