[project]
name = "research-agent"
version = "1.0.0"
description = "多Agent研究助理系统 - Multi-Agent Research Assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.136.3",
    "openai>=1.90.0",
    "python-dotenv>=1.1.0",
    "sentence-transformers",
    "uvicorn>=0.49.0",
]

[project.scripts]
research-agent = "research_agent.main:cli"
